[package]
name = "schedule-rs"
description = "A simple scheduling library inspired by Python's schedule."
documentation = "https://docs.rs/schedule-rs"
homepage = "https://github.com/Elinvynia/schedule-rs"
repository = "https://github.com/Elinvynia/schedule-rs.git"
keywords = ["schedule"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4"
